// Copyright (c) 2017-2019, NVIDIA CORPORATION.  All rights reserved.

/**
* experiment.proto: Protocol buffer definition for a top-level message
* encapsulating multiple other message types to form a complete specification
* for a MClassification experiment.
*/

syntax = "proto3";

import "nvidia_tao_tf1/cv/common/proto/training_config.proto";
import "nvidia_tao_tf1/cv/makenet/proto/model_config.proto";
import "nvidia_tao_tf1/cv/multitask_classification/proto/dataset_config.proto";

message Experiment {
    DataSource dataset_config = 1;
    ModelConfig model_config = 2;
    TrainingConfig training_config = 3;
    uint32 random_seed = 4;
}
